# Rust-International-Airport

./: .gitignore  Cargo.toml  README.md
data/: aircraft.json  airports.json  bookings.json  flights.json
data/backups/20250702_043932/: aircraft.json  airports.json  flights.json
src/: lib.rs  main.rs
src/data/: manager.rs  mod.rs  persistence.rs
src/modules/: admin.rs  aircraft.rs  airport.rs  booking.rs  flight.rs  mod.rs
src/ui/: display.rs  input.rs  menu.rs  mod.rs
