[package]
name = "rust-international-airport"
version = "0.1.0"
edition = "2021"
authors = ["Justin D. https://github.com/Myrmecology/Rust-International-Airport"]
description = "A comprehensive airport management system built in Rust"
license = "MIT"

[dependencies]
# Core functionality
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Terminal UI
crossterm = "0.27"
colored = "2.0"

# Async/Threading for real-time simulation
tokio = { version = "1.0", features = ["full"] }

# Input validation and utilities
thiserror = "1.0"
anyhow = "1.0"

[[bin]]
name = "airport"
path = "src/main.rs"